# rune

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  fs.rs  lib.rs  platform.rs  pty.rs  sysmon.rs  update.rs
src/components/: AIPanel.tsx  AISettings.tsx  ActivityMonitor.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffView.tsx  EditorArea.tsx  ErrorBoundary.tsx  FileBrowser.tsx  FilePreview.tsx  QuickOpen.tsx  SettingsModal.tsx  StatusBar.tsx  TerminalPane.tsx
src/lib/: cmComplete.ts  cmLang.ts  cmStatus.ts  cmTheme.ts  dialogs.tsx  diff.ts  fileIcons.tsx  fs.ts  fuzzy.ts  icons.tsx  layout.ts  markdown.ts  meta.ts  pty.ts  session.ts  settings.ts  sysmon.ts  theme-import.ts  update.ts
src/lib/ai/: agent.ts  client.ts  config.ts  context.ts  history.ts  items.ts  manager.ts  types.ts
